# cmmd_exec_crawlee_core

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.py  config.yml
core/: base_scraping_service.py  cache_manager.py  generic_crawler.py
logger/: logger.py
